acvus-mir-test/tests/snapshots/script__branch_destructure_object.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @out
     1 │   r1 = context_load r0
     2 │   r2 = context_project @user
     3 │   r3 = context_load r2
     5 │   r4 = test has_key(r3, "name")
     6 │   r5 = r3.name
     8 │   r6 = true (r7) && true (r8)
     9 │   r9 = test has_key(r3, "age")
    10 │   r10 = r3.age
    12 │   r11 = r6 && true (r12)
    13 │   jump_if r11 then L0 else L1(r1)
    14 │ L0:
    15 │   r13 = r3.name
    16 │   r14 = r3.age
    17 │   jump L1(r13)
    18 │ L1(r15: String):
    19 │   r16 = context_project @out
    20 │   ctx_store r16 = r15
    21 │   return r15

    ; r0 (@out) : <error>
    ; r1 (v1) : String
    ; r2 (@user) : <error>
    ; r3 (v3) : {age: Int, name: String}
    ; r17 (@user) : {age: Int, name: String}
    ; r18 (v5) : {age: Int, name: String}
    ; r7 (v6) : Bool
    ; r4 (v7) : Bool
    ; r5 (v8) : String
    ; r8 (v9) : Bool
    ; r6 (v10) : Bool
    ; r9 (v11) : Bool
    ; r10 (v12) : Int
    ; r12 (v13) : Bool
    ; r11 (v14) : Bool
    ; r13 (name) : String
    ; r14 (age) : Int
    ; r19 (v17) : String
    ; r20 (@out) : String
    ; r21 (v19) : String
    ; r15 (v20) : String
    ; r16 (v21) : String
