acvus-mir-test/tests/snapshots/script__branch_nested_match.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = undef
     1 │   r1 = undef
     2 │   r2 = context_project @a
     3 │   r3 = context_load r2
     4 │   r4 = context_project @b
     5 │   r5 = context_load r4
     6 │   r6 = context_project @out
     7 │   r7 = context_load r6
     8 │   r8 = r3 + r5
     9 │   r9 = context_project @out
    10 │   ctx_store r9 = r8
    11 │   return r8

    ; r0 (v17) : Int
    ; r1 (v18) : Int
    ; r2 (@a) : Int
    ; r3 (v2) : Int
    ; r4 (@b) : Int
    ; r5 (v4) : Int
    ; r6 (@out) : Int
    ; r7 (v6) : Int
    ; r8 (v13) : Int
    ; r9 (v14) : Int
    ; r10 (x) : Int
    ; r11 (@b) : Int
    ; r12 (y) : Int
    ; r13 (@out) : Int
    ; r14 (@a) : Int
    ; r15 (y) : Int
    ; r16 (v16) : Int
    ; r17 (x) : Int
