acvus-mir-test/tests/snapshots/script__branch_refutable_literal.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @out
     1 │   r1 = context_load r0
     2 │   r2 = context_project @val
     3 │   r3 = context_load r2
     4 │   r4 = test r3 == 42
     5 │   jump_if r4 then L0 else L1(r1)
     6 │ L0:
     8 │   jump L1(1 (r5))
     9 │ L1(r6: Int):
    10 │   r7 = context_project @out
    11 │   ctx_store r7 = r6
    12 │   return r6

    ; r0 (@out) : Int
    ; r1 (v2) : Int
    ; r2 (@val) : Int
    ; r3 (v4) : Int
    ; r4 (v7) : Bool
    ; r5 (v8) : Int
    ; r6 (v12) : Int
    ; r7 (v13) : Int
    ; r8 (v11) : Int
    ; r9 (@out) : Int
    ; r10 (v6) : Int
    ; r11 (v9) : Int
    ; r12 (@val) : Int
