acvus-mir-test/tests/snapshots/script__branch_simple_bind.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = undef
     1 │   r1 = ref @data
     2 │   r2 = load r1
     3 │   r3 = ref @out
     4 │   r4 = load r3
     5 │   r5 = ref @data
     7 │   r6 = r2 + 1 (r7)
     8 │   r8 = ref @out
     9 │   store r8 = r6
    10 │   r9 = ref @out
    11 │   return r6

    ; r0 (v16) : Int
    ; r1 (@data) : Ref<Int>
    ; r2 (@data) : Int
    ; r3 (@out) : Ref<Int>
    ; r4 (@out) : Int
    ; r5 (@data) : Ref<Int>
    ; r6 (v12) : Int
    ; r7 (v11) : Int
    ; r8 (@out) : Ref<Int>
    ; r9 (@out) : Ref<Int>
    ; r10 (x) : Int
    ; r11 (v9) : Ref<Int>
    ; r12 (v15) : Int
    ; r13 (x) : Int
    ; r14 (v8) : Ref<Int>
