acvus-mir-test/tests/snapshots/script__combined_accumulate_in_loop.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     2 │   r2 = context_project @product
     3 │   r3 = context_load r2
     4 │   r4 = context_project @sum
     5 │   r5 = context_load r4
     6 │   r6 = cast ListToIterator r1
     7 │   jump L0(r6, r5, r3, r7)
     8 │ L0(r8: Iterator<Int>, r9: <error>, r10: <error>, r11: Int):
     9 │   r12 = context_project @sum
    10 │   ctx_store r12 = r9
    11 │   r13 = context_project @product
    12 │   ctx_store r13 = r10
    13 │   iter_step r14, r15 = r8 else L1()
    14 │ L2:
    15 │   r16 = context_project @sum
    16 │   r17 = context_load r16
    17 │   r18 = r17 + r14
    18 │   r19 = context_project @product
    19 │   r20 = context_load r19
    20 │   r21 = r20 * r14
    21 │   jump L0(r15, r18, r21, r14)
    22 │ L1:
    23 │   r22 = context_project @sum
    24 │   r23 = context_load r22
    25 │   r24 = context_project @product
    26 │   r25 = context_load r24
    27 │   r26 = r23 + r25
    28 │   return r26

    ; r0 (@items) : <error>
    ; r1 (v1) : List<Int>
    ; r2 (@product) : <error>
    ; r3 (v3) : Int
    ; r4 (@sum) : <error>
    ; r5 (v5) : Int
    ; r6 (v8) : Iterator<Int>
    ; r7 (v27) : Int
    ; r8 (v9) : Iterator<Int>
    ; r9 (v28) : <error>
    ; r10 (v29) : <error>
    ; r11 (v30) : Int
    ; r12 (v31) : <error>
    ; r13 (v32) : <error>
    ; r14 (x) : Int
    ; r15 (v11) : Iterator<Int>
    ; r16 (@sum) : Int
    ; r17 (v13) : Int
    ; r18 (v15) : Int
    ; r19 (@product) : Int
    ; r20 (v18) : Int
    ; r21 (v20) : Int
    ; r22 (@sum) : Int
    ; r23 (v23) : Int
    ; r24 (@product) : Int
    ; r25 (v25) : Int
    ; r26 (v26) : Int
    ; r27 (@items) : List<Int>
    ; r28 (x) : Int
    ; r29 (v21) : Int
    ; r30 (v7) : List<Int>
    ; r31 (v16) : Int
    ; r32 (x) : Int
