acvus-mir-test/tests/snapshots/script__combined_loop_with_branch.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @count
     1 │   r1 = context_load r0
     2 │   r2 = context_project @items
     3 │   r3 = context_load r2
     4 │   r4 = cast ListToIterator r3
     5 │   jump L0(r4, r1)
     6 │ L0(r5: Iterator<Int>, r6: <error>):
     7 │   r7 = context_project @count
     8 │   ctx_store r7 = r6
     9 │   iter_step r8, r9 = r5 else L1()
    10 │ L2:
    11 │   r10 = test r8 == 0
    12 │   jump_if r10 then L3 else L4(r6)
    13 │ L3:
    14 │   r11 = context_project @count
    15 │   r12 = context_load r11
    17 │   r13 = r12 + 1 (r14)
    18 │   jump L4(r13)
    19 │ L4(r15: <error>):
    20 │   r16 = context_project @count
    21 │   ctx_store r16 = r15
    22 │   jump L0(r9, r15)
    23 │ L1:
    24 │   r17 = context_project @count
    25 │   r18 = context_load r17
    26 │   return r18

    ; r0 (@count) : <error>
    ; r1 (v1) : Int
    ; r2 (@items) : <error>
    ; r3 (v3) : List<Int>
    ; r4 (v6) : Iterator<Int>
    ; r5 (v7) : Iterator<Int>
    ; r6 (v18) : <error>
    ; r7 (v20) : <error>
    ; r8 (x) : Int
    ; r9 (v9) : Iterator<Int>
    ; r10 (v10) : Bool
    ; r11 (@count) : Int
    ; r12 (v12) : Int
    ; r13 (v14) : Int
    ; r14 (v13) : Int
    ; r15 (v19) : <error>
    ; r16 (v21) : <error>
    ; r17 (@count) : Int
    ; r18 (v17) : Int
    ; r19 (v15) : Int
    ; r20 (v5) : List<Int>
    ; r21 (@items) : List<Int>
