acvus-mir-test/tests/snapshots/script__combined_multiple_loops_sequential.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = undef
     1 │   r1 = undef
     2 │   r2 = context_project @a
     3 │   r3 = context_load r2
     4 │   r4 = context_project @b
     5 │   r5 = context_load r4
     6 │   r6 = context_project @sum
     7 │   r7 = context_load r6
     9 │   jump L0(0 (r8), r7, r0)
    10 │ L0(r9: Int, r10: Int, r11: Int):
    11 │   r12 = context_project @sum
    12 │   ctx_store r12 = r10
    13 │   list_step r13, r14 = r3[r9] else L1()
    14 │ L2:
    15 │   r15 = context_project @sum
    16 │   r16 = context_load r15
    17 │   r17 = r16 + r13
    18 │   jump L0(r14, r17, r13)
    19 │ L1:
    20 │   r18 = context_project @b
    21 │   r19 = context_load r18
    23 │   jump L3(0 (r20), r10, r1)
    24 │ L3(r21: Int, r22: Int, r23: Int):
    25 │   r24 = context_project @sum
    26 │   ctx_store r24 = r22
    27 │   list_step r25, r26 = r19[r21] else L4()
    28 │ L5:
    29 │   r27 = context_project @sum
    30 │   r28 = context_load r27
    31 │   r29 = r28 + r25
    32 │   jump L3(r26, r29, r25)
    33 │ L4:
    34 │   r30 = context_project @sum
    35 │   r31 = context_load r30
    36 │   return r31

    ; r0 (v31) : Int
    ; r1 (v32) : Int
    ; r2 (@a) : List<Int>
    ; r3 (v2) : List<Int>
    ; r4 (@b) : List<Int>
    ; r5 (v4) : List<Int>
    ; r6 (@sum) : Int
    ; r7 (v6) : Int
    ; r8 (v9) : Int
    ; r9 (v10) : Int
    ; r10 (v33) : Int
    ; r11 (v34) : Int
    ; r12 (v39) : Int
    ; r13 (x) : Int
    ; r14 (v12) : Int
    ; r15 (@sum) : Int
    ; r16 (v14) : Int
    ; r17 (v16) : Int
    ; r18 (@b) : List<Int>
    ; r19 (v19) : List<Int>
    ; r20 (v20) : Int
    ; r21 (v21) : Int
    ; r22 (v36) : Int
    ; r23 (v38) : Int
    ; r24 (v40) : Int
    ; r25 (y) : Int
    ; r26 (v23) : Int
    ; r27 (@sum) : Int
    ; r28 (v25) : Int
    ; r29 (v27) : Int
    ; r30 (@sum) : Int
    ; r31 (v30) : Int
    ; r32 (v28) : Int
    ; r33 (v8) : List<Int>
    ; r34 (v17) : Int
    ; r35 (x) : Int
    ; r36 (y) : Int
    ; r37 (@a) : List<Int>
