acvus-mir-test/tests/snapshots/script__combined_nested_loop_context.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @outer
     1 │   r1 = context_load r0
     2 │   r2 = context_project @total
     3 │   r3 = context_load r2
     4 │   r4 = cast ListToIterator r1
     5 │   jump L0(r4, r3)
     6 │ L0(r5: Iterator<List<Int>>, r6: Int):
     7 │   r7 = context_project @total
     8 │   ctx_store r7 = r6
     9 │   iter_step r8, r9 = r5 else L1()
    10 │ L2:
    11 │   r10 = cast ListToIterator r8
    12 │   jump L3(r10, r6)
    13 │ L3(r11: Iterator<Int>, r12: Int):
    14 │   r13 = context_project @total
    15 │   ctx_store r13 = r12
    16 │   iter_step r14, r15 = r11 else L4()
    17 │ L5:
    18 │   r16 = context_project @total
    19 │   r17 = context_load r16
    20 │   r18 = r17 + r14
    21 │   jump L3(r15, r18)
    22 │ L4:
    23 │   jump L0(r9, r12)
    24 │ L1:
    25 │   r19 = context_project @total
    26 │   r20 = context_load r19
    27 │   return r20

    ; r0 (@outer) : <error>
    ; r1 (v1) : List<List<Int>>
    ; r2 (@total) : <error>
    ; r3 (v3) : Int
    ; r21 (@outer) : List<List<Int>>
    ; r22 (v5) : List<List<Int>>
    ; r4 (v6) : Iterator<List<Int>>
    ; r5 (v7) : Iterator<List<Int>>
    ; r8 (row) : List<Int>
    ; r9 (v9) : Iterator<List<Int>>
    ; r10 (v10) : Iterator<Int>
    ; r11 (v11) : Iterator<Int>
    ; r14 (x) : Int
    ; r15 (v13) : Iterator<Int>
    ; r16 (@total) : Int
    ; r17 (v15) : Int
    ; r18 (v16) : Int
    ; r23 (v17) : Int
    ; r19 (@total) : Int
    ; r20 (v19) : Int
    ; r12 (v20) : Int
    ; r6 (v21) : Int
    ; r7 (v22) : Int
    ; r13 (v23) : Int
