acvus-mir-test/tests/snapshots/script__func_builtin_in_loop.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = undef
     1 │   r1 = context_project @items
     2 │   r2 = context_load r1
     3 │   r3 = context_project @out
     4 │   r4 = context_load r3
     6 │   jump L0(0 (r5), r4, r0)
     7 │ L0(r6: Int, r7: String, r8: Int):
     8 │   r9 = context_project @out
     9 │   ctx_store r9 = r7
    10 │   list_step r10, r11 = r2[r6] else L1()
    11 │ L2:
    12 │   r12 = context_project @out
    13 │   r13 = context_load r12
    14 │   r14 = call #0(r10)
    15 │   r15 = r13 + r14
    16 │   jump L0(r11, r15, r10)
    17 │ L1:
    18 │   r16 = context_project @out
    19 │   r17 = context_load r16
    20 │   return r17

    ; r0 (v19) : Int
    ; r1 (@items) : List<Int>
    ; r2 (v2) : List<Int>
    ; r3 (@out) : String
    ; r4 (v4) : String
    ; r5 (v7) : Int
    ; r6 (v8) : Int
    ; r7 (v20) : String
    ; r8 (v21) : Int
    ; r9 (v22) : String
    ; r10 (x) : Int
    ; r11 (v10) : Int
    ; r12 (@out) : String
    ; r13 (v12) : String
    ; r14 (to_string(...)) : String
    ; r15 (v15) : String
    ; r16 (@out) : String
    ; r17 (v18) : String
    ; r18 (v6) : List<Int>
    ; r19 (@items) : List<Int>
    ; r20 (x) : Int
    ; r21 (v16) : String
