acvus-mir-test/tests/snapshots/script__func_pipe_chain.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     2 │   r2 = cast ListToIterator r1
     3 │   r3 = closure L0 []
     4 │   r4 = poison
     5 │   r5 = poison
     6 │   return r5

    ; r0 (@items) : List<Int>
    ; r1 (v1) : List<Int>
    ; r2 (v4) : Iterator<Int>
    ; r3 (v5) : Fn(Int) -> Bool
    ; r4 (filter(...)) : Iterator<Int>
    ; r5 (collect(...)) : List<Int>
    ; r6 (v3) : List<Int>
    ; r7 (@items) : List<Int>

=== closure L0 (ValueId(0)) ===
     1 │   r0 = r1 > 0 (r2)
     2 │   return r0

    ; r0 (v3) : Bool
    ; r1 (v0) : Int
    ; r2 (v2) : Int
    ; r3 (x) : Int
    ; r4 (v4) : Int
